# JRemote_Controller

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: build.yml
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/release/: output-metadata.json
android_app/gradle/: libs.versions.toml
boards/esp32s3_develop/: BOARD_CONFIG.md
docs/: ZEPHYR_THREAD_PATTERN.md
docs/plans/: 2026-03-03-wifi-udp-design.md  2026-03-03-wifi-udp-implementation.md  2026-03-05-ble-control-design.md  2026-03-05-ble-implementation-plan.md
firmware/arduino_demo/: README.md  ble_config.cpp  ble_config.h  ble_control.cpp  button.cpp  button.h  firmware_demo.ino  led.cpp  led.h  mcu.h  wifi.cpp
firmware/zephyr_app/: ZEPHYR_SETUP.md  build.py  flash.py  west.yml
firmware/zephyr_app/app/: CMakeLists.txt  Kconfig  prj.conf
firmware/zephyr_app/app/.run/: zephyr_debug.run.xml
firmware/zephyr_app/app/boards/: esp32s3_devkitm_procpu.overlay
firmware/zephyr_app/app/inc/: ble.h  control_data.h  serial.h  ws2812_led.h
firmware/zephyr_app/app/inc/data/: control_data.h  control_data_handler.h  data_handler.h  user_data_handler.h
firmware/zephyr_app/app/inc/peripheral/: ble.h  serial.h
firmware/zephyr_app/app/src/: ble.cpp  control_data.cpp  main.cpp  ws2812_led.cpp
firmware/zephyr_app/app/src/data/: control_data_handler.cpp  data_handler.cpp  user_data_handler.cpp
firmware/zephyr_app/app/src/peripheral/: ble.cpp  ws2812_led.cpp
sample/esp32_ble_config/: esp32_ble_config.ino
sample/esp32_udp_receiver/: esp32_udp_receiver.ino
(+45 files in other folders)
